2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* gnome-color-picker.c (drag_data_received): Emit color_changed
	signal, fixes #77988.

2002-04-08  Anders Carlsson  <andersca@gnu.org>

	* gnome-appbar.c: Remove pointless debug-output. Fixes #75699.

	* gnome-dateedit.c: Revert Richard's patch so that keynav works
	again.

2002-03-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-icon-item.c (gnome_icon_text_item_configure): Set the
	font description.

2002-03-05  jacob berkman  <jacob@ximian.com>

	* gnome-ui-init.c (libgnomeui_segv_setup): listen to SIGABRT and
	SIGTRAP also

2002-03-07  James Henstridge  <james@daa.com.au>

	* Makefile.am ($(libgnomeui_2_la_OBJECTS)): change target from
	$(OBJECTS), to give automake 1.5 compatibility.

2002-01-21  James Henstridge  <james@daa.com.au>

	* gnome-client.c (gnome_client_module_info_get): fix up reference
	to gnome_gtk_module_info_get().

	* gnome-ui-init.c (libgnomeui_module_info_get): use the gtk
	GnomeModuleInfo from libbonoboui.

	* gnome-ui-init.h (GNOME_GTK_MODULE): define this to
	BONOBO_GTK_MODULE for compatibility.

2002-02-27  Mark McLoughlin  <mark@skynet.ie>

	* gnome-entry.c: (set_combo_items): don't set the popdown
	list if there's nothing in it.

2002-02-27  Mark McLoughlin  <mark@skynet.ie>

	* gnome-icon-entry.c: (gnome_icon_entry_class_init): set
	property handlers berfore installing properties.

2002-02-25  Zbigniew Chyla  <cyba@gnome.pl>

	* gnome-about.c (gnome_about_instance_init): Marked string for translation.

2002-02-20  Anders Carlsson  <andersca@gnu.org>

	* gnome-ui-init.c (initialize_gtk_signal_relay): The soundlist
	file is now called gtk-events-2.soundlist

2002-02-14  Anders Carlsson  <andersca@gnu.org>

	* gnome-icon-item.c (gnome_icon_text_item_draw): Use 
	GTK_STATE_NORMAL if the icon isn't selected.

2002-02-13  Anders Carlsson  <andersca@gnu.org>

	* gnome-about.c (gnome_about_display_credits_dialog): Put 
	credits into a GtkNotebook.
