@@ -1,5 +1,8 @@
 2002-04-09  Anders Carlsson  <andersca@gnu.org>
 
+	* gnome-dialog.c (gnome_dialog_set_parent): Don't try to move
+	the dialog over windows. Fixes #71076.
+
 	* gnome-color-picker.c (drag_data_received): Emit color_changed
 	signal, fixes #77988.
 
